# async_train_spammer

./: .gitignore  Dockerfile  docker-compose.yml  help.json  main.py  pyproject.toml
commands/: __init__.py  fun.py  other.py  pres_parser.py  stealer.py  timetable.py  tinder.py
db/: db.py  models.py  operations.py  other_opeations.py  timetable_operations.py
utils/: config.py  help_parser.py  pres_parser.py  time_messages.py  timetable.py  timetable_parser.py  timetable_utils.py
