[tool.poetry]
name = "train-spammer-2021"
version = "0.1.0"
description = ""
authors = ["Margo <slava1kvartovkin@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
starlette = "^0.16.0"
SQLAlchemy = "^1.4.26"
pydantic = "^1.8.2"
vkbottle = "^3.0.2"
requests = "^2.26.0"
openpyxl = "^3.0.9"
psycopg2-binary = "^2.9.3"
svglib = "^1.2.1"
PyPDF2 = "^1.26.0"
aioschedule = "^0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
